CI: Add support for BSDs + arm v6/v7

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,7 +5,14 @@ builds:
       - linux
       - windows
       - darwin
+      - freebsd
+      - openbsd
     goarch:
       - amd64
       - arm64
+      - arm
+    
+    goarm:
+      - 6
+      - 7
 universal_binaries:
